deploy/backstage.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  labels:
    app.kubernetes.io/name: backstage
spec:
  ports:
    - name: http
      port: 80
      targetPort: 7007
  selector:
    app.kubernetes.io/name: backstage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  labels:
    app.kubernetes.io/name: backstage
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: backstage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backstage
    spec:
      containers:
        - name: backend
          image: povir/backstage-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7007
